--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -2,3 +2,9 @@ $body-bg-color: #e4e4e4;
 $global-font: 'Roboto', sans-serif;
 $button-color: red;
 $button-color-hover: darken($button-color, 5%);
+
+%text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
