--- a/frontend/src/scss/form.scss
+++ b/frontend/src/scss/form.scss
@@ -1,6 +1,18 @@
 @import './variables';
 
+$form-margins: 20px;
+
 .form-wrapper {
+
+  .form-container {
+    margin-left: $form-margins;
+    margin-right: $form-margins;
+
+    &.border-bottom {
+      border-bottom: 1px solid darken($body-bg-color, 10%);
+    }
+  }
+
   .input-field {
     label {
       display: inline-block;
@@ -80,7 +92,35 @@
   }
 
   .comments-wrapper {
-    border-top: 1px solid darken($body-bg-color, 10%);
-    margin-bottom: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    min-height: calc(45px * 2);
+    max-height: calc(45px * 5);
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin-left: $form-margins;
+
+    .comment {
+      margin-bottom: 5px;
+
+      p {
+        margin: 0;
+      }
+
+      .name {
+        font-size: 14px;
+        font-weight: 700;
+      }
+
+      .create-date {
+        font-size: 12px;
+        font-weight: 200;
+        color: #D6D6D6;
+      }
+
+      .comment-text {
+        font-size: 13px;
+      }
+    }
   }
 }
