--- a/frontend/src/scss/modal.scss
+++ b/frontend/src/scss/modal.scss
@@ -31,7 +31,7 @@
     .modal-header {
       padding: 2px 16px;
       color: black;
-      border-bottom: 1px solid darken($body-bg-color, 10%);
+      //border-bottom: 1px solid darken($body-bg-color, 10%);
 
       h3 {
         margin: 10px 15px 10px 0px;
@@ -56,7 +56,7 @@
     }
 
     .modal-body {
-      padding: 2px 16px;
+      //padding: 2px 16px;
     }
 
     .modal-footer {
