--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -1,5 +1,6 @@
+@import './fonts';
+
 $body-bg-color: #e4e4e4;
-$global-font: 'Roboto', sans-serif;
 $button-color: red;
 $button-color-hover: darken($button-color, 5%);
 
